# easycan-apps

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.github/workflows/: release.yml
apps/messenger/: APP.md  app.json  deploy.sh  dev.sh  dfx.json
apps/messenger/canister/: Cargo.toml  messenger_canister.did
apps/messenger/canister/src/: lib.rs
apps/messenger/frontend/: index.html  package-lock.json  package.json  preview.html  vite.config.js
apps/messenger/frontend/public/: manifest.json
apps/messenger/frontend/src/: idl.js  main.js
apps/messenger/frontend/src/app/: connection-manager.js  contacts-store.js
apps/messenger/frontend/src/app/components/: avatar.js  bottom-nav.js  call-banner.js
apps/messenger/frontend/src/app/layout/: desktop-rail.js
apps/messenger/frontend/src/app/lib/: notifications.js  parse-contact.js
apps/messenger/frontend/src/app/pages/: add-contact.js  chat-empty.js  chat.js  chats.js  contacts.js  login.js  not-owner.js  settings.js  verify-failed.js
apps/messenger/frontend/src/app/styles/: messenger.css
apps/supercanister-hub/: README.md  app.json  deploy.sh  dfx.json
apps/supercanister-hub/canister/: Cargo.toml  hub_canister.did
apps/supercanister-hub/canister/src/: lib.rs
apps/supercanister-hub/canister/tests/: engine_live.rs
apps/supercanister-hub/frontend/: index.html  package-lock.json  package.json  vite.config.js
apps/supercanister-hub/frontend/public/: manifest.json
apps/supercanister-hub/frontend/src/: idl.js  main.js
apps/supercanister-hub/frontend/src/app/components/: top-nav.js
apps/supercanister-hub/frontend/src/app/pages/: automations.js  capsule-decrypt.js  capsule.js  control-room.js  feed.js  login.js  mini-apps.js  not-owner.js  run.js  settings.js  verify-failed.js
apps/supercanister-hub/frontend/src/lib/: hub-api.js  ui.js
apps/supercanister-hub/frontend/src/styles/: hub.css
apps/supercanister-hub/standalone/: capsule-opener.html
apps/supercanister-hub/test-bundle/: test.bundle
apps/supercanister-hub/test-bundle/src/: index.html
apps/vault/: app.json  deploy.sh  dfx.json
apps/vault/canister/: Cargo.toml  vault_canister.did
apps/vault/canister/src/: lib.rs
apps/vault/frontend/: index.html  package-lock.json  package.json  preview.html  vite.config.js
apps/vault/frontend/public/: manifest.json
apps/vault/frontend/src/: idl.js  main.js
apps/vault/frontend/src/app/components/: bottom-nav.js  top-nav.js
apps/vault/frontend/src/app/pages/: dashboard.js  files.js  login.js  note-edit.js  notes.js  password-edit.js  passwords.js  settings.js  verify-failed.js
apps/vault/frontend/src/lib/: encrypted-crud.js
apps/vault/frontend/src/styles/: vault.css
core/: CLAUDE.md  README.md
core/cap-archive/: Cargo.toml
core/cap-archive/src/: lib.rs
core/cap-automation/: Cargo.toml
core/cap-automation/src/: lib.rs
core/cap-crud/: Cargo.toml
core/cap-crud/src/: lib.rs
core/cap-crypto/: Cargo.toml
core/cap-crypto/src/: lib.rs
core/cap-messaging/: Cargo.toml
core/cap-messaging/src/: lib.rs
core/cap-notify/: Cargo.toml
core/cap-notify/src/: lib.rs
core/cap-platform/: Cargo.toml
core/cap-platform/src/: lib.rs
core/cap-presence/: Cargo.toml
core/cap-presence/src/: lib.rs
core/cap-signaling/: Cargo.toml
core/cap-signaling/src/: lib.rs
core/cap-store/: Cargo.toml
core/cap-store/src/: lib.rs
core/core-assets/: Cargo.toml
core/core-assets/src/: lib.rs
core/core-auth/: Cargo.toml
core/core-auth/src/: lib.rs
core/core-storage/: Cargo.toml
core/core-storage/src/: lib.rs
core/core-timer/: Cargo.toml
core/core-timer/src/: lib.rs
core/core-types/: Cargo.toml
core/core-types/src/: lib.rs
messenger/: manifest.json
messenger/0.2.0/: messenger_canister.wasm
messenger/0.3.6/: messenger_canister.wasm
scripts/: build-app-wasm.sh  make-manifest.sh
shared/: CLAUDE.md  package-lock.json  package.json
shared/src/: idl.js  main.js
shared/src/capabilities/: errors.js
shared/src/capabilities/archive/: index.js
shared/src/capabilities/calls/: index.js  media.js
shared/src/capabilities/calls/transport/: base.js  webrtc.js
shared/src/capabilities/chat-session/: index.js
shared/src/capabilities/contacts/: index.js
shared/src/capabilities/crud/: index.js
shared/src/capabilities/login/: index.js
shared/src/capabilities/messaging/: history.js  index.js
shared/src/capabilities/notify/: index.js
shared/src/capabilities/presence/: index.js
shared/src/capabilities/settings/: canister-health.js  index.js
shared/src/capabilities/sounds/: index.js
shared/src/capabilities/sovereignty/: index.js  page.js
shared/src/capabilities/update/: flow.js  handoff-idl.js  handoff-page.js  handoff.js  page.js
shared/src/capabilities/verify/: page.js
shared/src/core/: auth.js  capsule-opener.roundtrip.test.js  claim.js  config.js  crypto.js  crypto.test.js  event-bus.js  icp.js  management.js  platform-idl.js  platform.js  sovereignty.js  sovereignty.test.js
shared/src/styles/: base.css  theme.css
shared/src/ui/: dom.js  router.js
supercanister-hub/: manifest.json
supercanister-hub/0.1.0/: hub_canister.wasm
supercanister-hub/0.2.2/: hub_canister.wasm
vault/: manifest.json
vault/0.2.0/: vault_canister.wasm
vault/0.2.2/: vault_canister.wasm
