[package]
name = "core-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
core-types.workspace = true
core-storage.workspace = true
candid.workspace = true
ic-cdk.workspace = true
ic-certification.workspace = true
ic-http-certification.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_cbor.workspace = true
base64.workspace = true
