[package]
name = "vault-canister"
version = "0.2.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
platform = ["cap-platform"]

[dependencies]
# Core
core-types.workspace = true
core-storage.workspace = true
core-auth.workspace = true
core-assets.workspace = true

# Platform bridge (opzionale — attivato con --features platform)
cap-platform = { workspace = true, optional = true }

# Capability
cap-crud.workspace = true
cap-crypto.workspace = true

# IC SDK
candid.workspace = true
ic-cdk.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
